# crashbytes-guard

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crashbytes_guard/: __init__.py  _core.py
tests/: test_guard.py
