[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashbytes-guard"
version = "1.1.4"
description = "Expressive guard clauses for Python — fail fast with readable validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CrashBytes", email = "crashbytes@users.noreply.github.com" }]
keywords = ["guard", "validation", "preconditions", "assertions", "defensive-programming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.0", "pytest-cov>=7.1.0", "mypy>=2.1.0", "ruff>=0.15.17"]

[project.urls]
Homepage = "https://github.com/CrashBytes/crashbytes-guard"
Repository = "https://github.com/CrashBytes/crashbytes-guard"
Issues = "https://github.com/CrashBytes/crashbytes-guard/issues"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["crashbytes_guard"]

[tool.coverage.report]
fail_under = 90
